--- a/social/style.css
+++ b/social/style.css
@@ -57,12 +57,16 @@ body {
 /*TERMINOU O RODA CABEÇA*/
 
 .conteinerconversas {
-    width: 30%;
+    width: 20%;
     display: flex;
     flex-direction: column;
     padding: 2rem;
     margin: 2rem;
     background-color: white;
+    border-radius: 20px;
+    position: absolute;
+    top: 9rem;
+    left: 2rem;
 }
 
 .amigosclubes {
@@ -83,7 +87,6 @@ body {
 .amigosclubes img {
     width: 4rem;
     border-radius: 10px;
-
 }
 
 .amigosclubes button:hover {
@@ -94,4 +97,89 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+
+.conversasrecentes button {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    flex-direction: row;
+    background-color: transparent;
+    border: transparent;
+    margin-bottom: 1.2rem;
+}
+
+.conversasrecentes button:hover {
+    cursor: pointer;
+}
+
+.conversasrecentes img {
+    width: 4rem;
+    border-radius: 10px;
+    margin-right: 0.8rem;
+}
+
+/*TERMINO DO CONTEINER CONVERSAS*/
+
+/*COMEÇO DO CONTEINER COMENTARIOS*/
+
+.conteinersocial {
+    width: 45%;
+}
+
+.comentario {
+    width: 90%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.comentario {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+.fotousuariocomentario {
+    display: flex;
+    flex-direction: row;
+}
+
+.fotousuariosocial {
+    width: 7rem;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+}
+
+.fotousuariosocial img {
+    width: 7rem;
+    border-radius: 10px;
+}
+
+.comentariousuario {
+    width: 40rem;
+}
+
+.comentariousuario {
+    word-wrap: break-word;
+}
+
+.fotopostadausuario {
+    display: flex;
+    flex-direction: row;
+}
+
+.fotopostadausuario button {
+    width: 10rem;
+    border-radius: 20px;
+    border: transparent;
+    background-color: transparent;
+    margin: 10px;
+}
+
+.fotopostadausuario img {
+    width: 10rem;
+    height: 15rem;
+    border-radius: 20px;
 }
