--- a/social/style.css
+++ b/social/style.css
@@ -58,6 +58,7 @@ body {
 
 .conteinerconversas {
     width: 20%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     padding: 2rem;
@@ -74,9 +75,6 @@ body {
     flex-direction: row;
     align-items: center;
     margin-bottom: 1.5rem;
-    overflow-x: auto;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
 }
 
 .amigosclubes button {
@@ -100,6 +98,10 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+    overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
 }
 
 .conversasrecentes button {
@@ -200,3 +202,74 @@ body {
     border-radius: 20px;
 }
 
+/*ESCREVER SUA CRITICA OU COMENTARIO*/
+
+.comentar input {
+    width: 50rem;
+    height: 40px;
+    border: solid transparent;
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 0.5rem;
+}
+
+/*CONTEINER DAS NOTIFICAÇÕES*/
+
+.conteinernotificacao {
+    
+    width: 20%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    margin: 2rem;
+    background-color: white;
+    border-radius: 20px;
+    position: absolute;
+    top: 9rem;
+    left: 90rem;
+    overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+}
+
+.notificacao {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1rem;
+}
+
+.imagemdacurtidora button {
+    width: 4rem;
+    background-color: transparent;
+    border: transparent;
+    text-align: center;
+    margin-right: 1.2rem;
+}
+
+.imagemdacurtidora img {
+    width: 5rem;
+    border-radius: 10px;
+}
+
+.imagemdacurtidora button:hover {
+    cursor: pointer;
+}
+
+.motivooque {
+    border: transparent;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 10rem;
+}
+
+.motivooque:hover {
+    cursor: pointer;
+}
+
+.motivodacurtida {
+    text-align: center;
+}
